# linkedin-autoapply

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
auto_apply/: __init__.py  __main__.py  browser.py  config.py  cv_parser.py  cv_review.py  matcher.py  models.py  pipeline.py  run.py  setup_wizard.py  store.py
auto_apply/applier/: __init__.py  base.py  linkedin_apply.py
auto_apply/sources/: base.py  linkedin.py
auto_apply/tests/: test_config.py  test_cv_parser.py  test_linkedin_apply.py  test_linkedin_source.py  test_matcher.py  test_salary_parser.py  test_setup_wizard.py
