[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-autoapply"
version = "0.1.0"
description = "Automated LinkedIn Easy Apply CLI powered by Claude AI"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "playwright-stealth>=1.0",
    "pdfplumber>=0.10",
    "anthropic>=0.25",
    "click>=8.1",
    "pydantic>=2.0",
    "keyring>=24.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
linkedin-autoapply = "auto_apply.run:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_apply*"]

[tool.pytest.ini_options]
testpaths = ["auto_apply/tests"]
